--- a/wp-content/themes/astra-child-theme/style.css
+++ b/wp-content/themes/astra-child-theme/style.css
@@ -11,3 +11,7 @@
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
  Text Domain:  astra
 */
+
+body {
+    background-color: aqua !important;
+}
